--- a/dennis/css/style.css
+++ b/dennis/css/style.css
@@ -25,6 +25,7 @@ body {
     position: relative;
     text-align: center;
     margin: 10px;
+    border: 1px solid transparent;
 }
 
 .team-name {
@@ -47,4 +48,9 @@ body {
     border-radius: 10px;
 }
 
-
+.selected{
+    border: 1px solid black;
+    border-radius: 5px;
+    cursor: pointer;
+    box-shadow: 1px 1px 2px 2px gray;
+}
