--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ table {
     border: 2px solid black;
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    background-color: rgb(255, 242, 226);
+    background-color: antiquewhite;
     width: 100%;
    
     
@@ -16,7 +16,6 @@ td, th {
     text-align: left;
     padding: 8px;
     
-
 }
 
 .search{
@@ -29,9 +28,4 @@ td, th {
 }
 a{
     margin: 14%;
-}
-.displayResults{
-    height: 1000px;
-    overflow-y: auto;
-    overflow-x: hidden;
 }
