--- a/main.css
+++ b/main.css
@@ -6,9 +6,7 @@ table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     background-color: rgb(255, 242, 226);
-    width: 100%;
-   
-    
+    width: 50%;    
 }
 
 td, th {
@@ -34,4 +32,17 @@ a{
     height: 1000px;
     overflow-y: auto;
     overflow-x: hidden;
+}
+.assignDisabled {
+    background-color: lightgray;
+    text-align: center;
+    user-select: none;
+}
+.assignbutton{
+    user-select: none;
+    text-align: center;
+}
+.assignbutton:hover {
+    cursor: pointer;
+    background-color:  rgb(161, 145, 124);
 }
