--- a/app/website/main.css
+++ b/app/website/main.css
@@ -115,3 +115,26 @@ input::-webkit-inner-spin-button {
 input[type=number]{
     border:none;
 }
+#addCoursePane{
+    position: fixed;
+    width: 179px;
+    height: 170px;
+    top: 33%;
+    left: 44%;
+    margin: auto;
+    background-color: gray;
+    padding: 30px;
+}
+#addCoursePaneBackground{
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100%;
+    background-color: #00000078;
+    z-index: 99;
+    top: 0;
+    left: 0;
+}
+#addCourse button{
+    width: 48%;
+}
